--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
-PORT=3001
-NODE_ENV=development
+REACT_APP_PORT=3001
 
 # SPOTIFY API KEYS
-CLIENT_ID=882d508f65284f2bb6391a98aed7f619
-CLIENT_SECRET=b2f332bfc4d94292b02881fdcfe7e939
+REACT_APP_CLIENT_ID=882d508f65284f2bb6391a98aed7f619
+REACT_APP_CLIENT_SECRET=b2f332bfc4d94292b02881fdcfe7e939
 
 # OPENAI API KEYS
-OPENAI_API_KEY=
+REACT_APP_OPENAI_API_KEY=
