--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.17",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "openai": "^3.3.0",
     "react": "^18.2.0",
@@ -18,6 +21,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "concurrently \"nodemon src/server.js\" \"npm start\"",
     "build": "react-scripts build",
     "seed": "node src/seeds/seed.js",
     "test": "react-scripts test",
@@ -40,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.0",
+    "nodemon": "^3.0.1"
   }
 }
