--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cadence",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/client": "^3.7.17",
     "@testing-library/jest-dom": "^5.17.0",
@@ -15,6 +16,7 @@
     "openai": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
     "spotify-web-api-node": "^5.0.2",
     "web-vitals": "^2.1.4"
