--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "jwt-decode": "^2.2.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.7.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.0.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.2.1",
