--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "apollo-server-express": "^3.6.2",
     "bcrypt": "^4.0.1",
+    "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.17.2",
+    "express-session": "^1.17.3",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^7.0.2",
